docs: documentate user login route
