# docs/swagger.yaml
@@ -9,6 +9,18 @@ definitions:
       password:
         type: string
     type: object
+  dto.UserLoginInput:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
+  dto.UserLoginOutput:
+    properties:
+      access_token:
+        type: string
+    type: object
   handlers.Error:
     properties:
       message:
@@ -45,6 +57,38 @@ paths:
           schema:
             $ref: '#/definitions/handlers.Error'
       summary: Create user
+      tags:
+      - users
+  /users/auth:
+    post:
+      consumes:
+      - application/json
+      description: User login
+      parameters:
+      - description: user credentials
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserLoginInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.UserLoginOutput'
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Error'
+      summary: User login
       tags:
       - users
 securityDefinitions:
