# internal/dto/dto.go
@@ -15,3 +15,7 @@ type UserLoginInput struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type UserLoginOutput struct {
+	AccessToken string `json:"access_token"`
+}
